apps/nextcloud/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.1-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
            - mountPath: /var/www/html
              name: app-data
              readOnly: true
            - mountPath: /var/www/html/data
              name: user-data
              readOnly: true
          startupProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: cloud.${BASE_DOMAIN}
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: cloud.${BASE_DOMAIN}
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
        - name: nextcloud
          image: nextcloud:33.0.3-fpm-alpine
          volumeMounts:
            - mountPath: /var/www/html
              name: app-data
            - mountPath: /var/www/html/data
              name: user-data
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - crond
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: nextcloud-app-data
        - name: user-data
          persistentVolumeClaim:
            claimName: nextcloud-user-data
        - name: nginx-config
          configMap:
            name: nextcloud-nginx-config
