apps/nextcloud/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nextcloud
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
