apps/nextcloud/nextcloud/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - cloud.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
